--- a/config/lovelace/lovelace.yaml
+++ b/config/lovelace/lovelace.yaml
@@ -9,16 +9,14 @@ resources:
     type: module
   - url: /hacsfiles/mini-graph-card/mini-graph-card-bundle.js
     type: module
-  - url: /hacsfiles/lovelace-slider-entity-row/slider-entity-row.js
-    type: js
   - url: /hacsfiles/stack-in-card/stack-in-card.js
     type: module
   - url: /hacsfiles/button-card/button-card.js
     type: module
   - url: /hacsfiles/lovelace-fold-entity-row/fold-entity-row.js
-    type: js
+    type: module
   - url: /hacsfiles/lovelace-auto-entities/auto-entities.js
-    type: js
+    type: module
   - url: /hacsfiles/nintendo-wishlist-card/nintendo-wishlist-card.js
     type: js
   - url: /hacsfiles/simple-weather-card/simple-weather-card-bundle.js
