--- a/config/lovelace/views/03-blinds.yaml
+++ b/config/lovelace/views/03-blinds.yaml
@@ -56,8 +56,14 @@
               entities:
                 - entity: cover.fyrtur_1
                   name: Fyrtur 1
+                - entity: binary_sensor.window_openclose_1
+                  name: Window sensor 1
+                  icon: mdi:window-closed-variant
                 - entity: cover.fyrtur_2
                   name: Fyrtur 2
+                - entity: binary_sensor.window_openclose_2
+                  name: Window sensor 2
+                  icon: mdi:window-closed-variant
               style: |
                 ha-card {
                   background-color: var(--primary-background-color);
@@ -130,8 +136,14 @@
               entities:
                 - entity: cover.fyrtur_3
                   name: Fyrtur 3
+                - entity: binary_sensor.window_openclose_3
+                  name: Window sensor 3
+                  icon: mdi:window-closed-variant
                 - entity: cover.fyrtur_4
                   name: Fyrtur 4
+                - entity: binary_sensor.window_openclose_4
+                  name: Window sensor 4
+                  icon: mdi:window-closed-variant
               style: |
                 ha-card {
                   background-color: var(--primary-background-color);
@@ -155,6 +167,8 @@
                 card:
                   - width: 5px
                   - height: 10px
+    - type: vertical-stack  # right column
+      cards:
         - type: markdown  ### column
           content: |
             # Settings
