--- a/config/automation/light_automations.yaml
+++ b/config/automation/light_automations.yaml
@@ -5,7 +5,7 @@
   id: '1500581870'
   trigger:
     platform: template
-    value_template: '{{ states.sensor.time.state == states.sensor.wakeup_start_time_lights.state }}'
+    value_template: "{{ states('sensor.time') == states('sensor.wakeup_start_time_lights') }}"
   condition:
     condition: and
     conditions:
@@ -208,4 +208,4 @@
     - service: light.turn_on
       data_template:
         entity_id: light.toilette
-        brightness_pct: '{% if "07:00" < states.sensor.time.state < "22:00" %}100{% else %}5{% endif %}'
+        brightness_pct: "{% if '07:00' < states('sensor.time') < '22:00' %}100{% else %}5{% endif %}"
