--- a/config/sensor/mqtt.yaml
+++ b/config/sensor/mqtt.yaml
@@ -58,6 +58,28 @@
   unit_of_measurement: "dBm"
 
 - platform: mqtt
+  name: s20_deskoutlet_uptime
+  state_topic: "sonoff_0528/tele/STATE"
+  value_template: "{{ (value_json.UptimeSec | float / 60 / 60) | round(2) }}"
+  unit_of_measurement: "hours"
+
+- platform: mqtt
+  name: s20_deskoutlet_rssi
+  state_topic: "sonoff_0528/tele/STATE"
+  value_template: "{{ value_json['Wifi'].RSSI }}"
+  unit_of_measurement: "dBm"
+
+- platform: mqtt
+  name: s20_deskoutlet_ip
+  state_topic: "sonoff_0528/stat/STATUS5"
+  value_template: "{{ value_json['StatusNET'].IPAddress }}"
+
+- platform: mqtt
+  name: s20_deskoutlet_version
+  state_topic: "sonoff_0528/stat/STATUS2"
+  value_template: "{{ value_json['StatusFWR'].Version[:5] }}"
+
+- platform: mqtt
   name: sonoff_maddox_version
   state_topic: "sonoff-version"
 
