--- a/config/lovelace/views/05-IoT.yaml
+++ b/config/lovelace/views/05-IoT.yaml
@@ -233,6 +233,127 @@
       cards:
         - type: markdown
           content: |
+            # Desk outlet
+          style: |
+            ha-card {
+               height: 50px;
+               --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+               box-shadow: 2px 2px rgba(0,0,0,0.0);
+            }
+            h1 {
+              font-size: 20px;
+              font-weight: bold;
+              font-family: Helvetica;
+              letter-spacing: '-0.01em';
+            }
+        - type: horizontal-stack
+          cards:
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 5px
+                  - height: 10px
+            - type: entities
+              show_header_toggle: false
+              entities:
+                - entity: switch.desk_charger_outlet
+                  name: Desk charger
+              style: |
+                ha-card {
+                  background-color: var(--primary-background-color);
+                  border-radius: 15px;
+                  box-shadow:
+                    {% if is_state('sun.sun', 'above_horizon') %}
+                      -4px -4px 4px 0 rgba(255,255,255,.5),4px 4px 4px 0 rgba(0,0,0,.03);
+                    {% else %}
+                      -4px -4px 4px 0 rgba(50, 50, 50,.5),4px 4px 4px 0 rgba(0,0,0,.15);
+                    {% endif %}
+                }
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 5px
+                  - height: 10px
+        - type: 'custom:button-card'
+          show_icon: false
+          show_name: false
+          style: |
+            ha-card {
+              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              box-shadow: 2px 2px rgba(0,0,0,0.0);
+            }
+          styles:
+            card:
+              - width: 5px
+              - height: 10px
+        - type: horizontal-stack
+          cards:
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 5px
+                  - height: 10px
+            - type: glance
+              # title: S20 - MM
+              entities:
+                - entity: sensor.s20_deskoutlet_version
+                  name: Version
+                  icon: mdi:alpha-v-box
+                - entity: sensor.s20_deskoutlet_ip
+                  name: IP
+                  icon: mdi:map-marker
+                - entity: sensor.s20_deskoutlet_uptime
+                  name: Uptime
+                  icon: mdi:arrow-up-thick
+                - entity: sensor.s20_deskoutlet_rssi
+                  name: RSSI
+                  icon: mdi:signal-variant
+              style: |
+                ha-card {
+                  background-color: var(--primary-background-color);
+                  border-radius: 15px;
+                  box-shadow:
+                    {% if is_state('sun.sun', 'above_horizon') %}
+                      -4px -4px 4px 0 rgba(255,255,255,.5),4px 4px 4px 0 rgba(0,0,0,.03);
+                    {% else %}
+                      -4px -4px 4px 0 rgba(50, 50, 50,.5),4px 4px 4px 0 rgba(0,0,0,.15);
+                    {% endif %}
+                }
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 5px
+                  - height: 10px
+        - type: markdown
+          content: |
             # wemos d1 mini - 1
           style: |
             ha-card {
