--- a/config/automation/cover_automations.yaml
+++ b/config/automation/cover_automations.yaml
@@ -55,14 +55,30 @@
         state: home
       - condition: or
         conditions:
-          - condition: template
-            value_template: "{{ (state_attr('cover.fyrtur_1', 'current_position')|int) > 0 }}"
-          - condition: template
-            value_template: "{{ (state_attr('cover.fyrtur_2', 'current_position')|int) > 0 }}"
-          - condition: template
-            value_template: "{{ (state_attr('cover.fyrtur_3', 'current_position')|int) > 0 }}"
-          - condition: template
-            value_template: "{{ (state_attr('cover.fyrtur_4', 'current_position')|int) > 0 }}"
+          - condition: and
+            conditions:
+              - condition: template
+                value_template: "{{ (state_attr('cover.fyrtur_1', 'current_position')|int) > 0 }}"
+              - condition: template
+                value_template: "{{ is_state('binary_sensor.window_openclose_1', 'off') }}"
+          - condition: and
+            conditions:
+              - condition: template
+                value_template: "{{ (state_attr('cover.fyrtur_2', 'current_position')|int) > 0 }}"
+              - condition: template
+                value_template: "{{ is_state('binary_sensor.window_openclose_2', 'off') }}"
+          - condition: and
+            conditions:
+              - condition: template
+                value_template: "{{ (state_attr('cover.fyrtur_3', 'current_position')|int) > 0 }}"
+              - condition: template
+                value_template: "{{ is_state('binary_sensor.window_openclose_3', 'off') }}"
+          - condition: and
+            conditions:
+              - condition: template
+                value_template: "{{ (state_attr('cover.fyrtur_4', 'current_position')|int) > 0 }}"
+              - condition: template
+                value_template: "{{ is_state('binary_sensor.window_openclose_4', 'off') }}"
   action:
     service: cover.close_cover
     data_template:
