--- a/config/sensor/pricemonitoring.yaml
+++ b/config/sensor/pricemonitoring.yaml
@@ -4,13 +4,13 @@
 - platform: nintendo_wishlist
   country: AT
   wishlist:
-    - '80 DAYS'
-    - 'Untitled Goose Game'
-    - 'Return of the Obra Dinn'
-    - 'Bad North'
-    - 'UNDERTALE'
-    - 'Dead Cells'
-    - 'Wargroove'
-    - 'The Touryst'
-    - 'Hollow Knight'
-    # - 'Northgard'
+    - "80 DAYS"
+    - "Untitled Goose Game"
+    - "Return of the Obra Dinn"
+    - "Bad North"
+    - "UNDERTALE"
+    - "Dead Cells"
+    - "Wargroove"
+    - "The Touryst"
+    - "Hollow Knight"
+    # - "Northgard"
