fix tasmota firmware url

--- a/config/script/wemosd1_1.yaml
+++ b/config/script/wemosd1_1.yaml
@@ -4,7 +4,7 @@
 'tasmota_upgrade_wemosd1_1':
   sequence:
     - data:
-        payload: http://sonoff.maddox.co.uk/tasmota/sonoff-minimal.bin
+        payload: 'http://thehackbox.org/tasmota/release/tasmota-minimal.bin'
         topic: wemosd1_1/cmnd/OtaUrl
       service: mqtt.publish
     - delay: 00:00:05
@@ -14,7 +14,7 @@
       service: mqtt.publish
     - delay: 00:03:00
     - data:
-        payload: http://sonoff.maddox.co.uk/tasmota/sonoff.bin
+        payload: 'http://thehackbox.org/tasmota/release/tasmota-sensors.bin'
         topic: wemosd1_1/cmnd/OtaUrl
       service: mqtt.publish
     - delay: 00:00:05
