--- a/config/lovelace/views/05-IoT.yaml
+++ b/config/lovelace/views/05-IoT.yaml
@@ -177,29 +177,9 @@
                     - entity: sensor.s20_mm_rssi
                       name: RSSI
                       icon: mdi:signal-variant
-                  style: |
-                    ha-card {
-                      background-color: var(--primary-background-color);
-                      border-radius: 15px;
-                      box-shadow:
-                        {% if is_state('sun.sun', 'above_horizon') %}
-                          -4px -4px 4px 0 rgba(255,255,255,.5),4px 4px 4px 0 rgba(0,0,0,.03);
-                        {% else %}
-                          -4px -4px 4px 0 rgba(50, 50, 50,.5),4px 4px 4px 0 rgba(0,0,0,.15);
-                        {% endif %}
-                    }
                 - type: entities
                   show_header_toggle: false
                   entities:
-                    - type: custom:fold-entity-row
-                      head:
-                        type: section
-                        label: Automatisierungen
-                      entities:
-                        - entity: automation.update_available_tasmota_sonoff_3463
-                          name: Updatebenachrichtigung
-                        - entity: automation.upgrade_tasmota_sonoff_3463
-                          name: Upgrade
                     - type: custom:fold-entity-row
                       head:
                         type: section
@@ -312,21 +292,8 @@
                 card:
                   - width: 5px
                   - height: 10px
-            - type: glance
-              # title: S20 - MM
-              entities:
-                - entity: sensor.s20_deskoutlet_version
-                  name: Version
-                  icon: mdi:alpha-v-box
-                - entity: sensor.s20_deskoutlet_ip
-                  name: IP
-                  icon: mdi:map-marker
-                - entity: sensor.s20_deskoutlet_uptime
-                  name: Uptime
-                  icon: mdi:arrow-up-thick
-                - entity: sensor.s20_deskoutlet_rssi
-                  name: RSSI
-                  icon: mdi:signal-variant
+            - type: custom:stack-in-card
+              mode: vertical
               style: |
                 ha-card {
                   background-color: var(--primary-background-color);
@@ -338,6 +305,40 @@
                       -4px -4px 4px 0 rgba(50, 50, 50,.5),4px 4px 4px 0 rgba(0,0,0,.15);
                     {% endif %}
                 }
+              cards:
+                - type: glance
+                  # title: S20 - desk
+                  entities:
+                    - entity: sensor.s20_deskoutlet_version
+                      name: Version
+                      icon: mdi:alpha-v-box
+                    - entity: sensor.s20_deskoutlet_ip
+                      name: IP
+                      icon: mdi:map-marker
+                    - entity: sensor.s20_deskoutlet_uptime
+                      name: Uptime
+                      icon: mdi:arrow-up-thick
+                    - entity: sensor.s20_deskoutlet_rssi
+                      name: RSSI
+                      icon: mdi:signal-variant
+                - type: entities
+                  show_header_toggle: false
+                  entities:
+                    - type: custom:fold-entity-row
+                      head:
+                        type: section
+                        label: Scripts
+                      entities:
+                        - entity: script.tasmota_status_sonoff_0528
+                          name: Status
+                        - entity: script.tasmota_fwstatus_sonoff_0528
+                          name: FW-Status
+                        - entity: script.tasmota_restart_sonoff_0528
+                          name: Neustart
+                        - entity: script.tasmota_reset_sonoff_0528
+                          name: Reset
+                        - entity: script.tasmota_upgrade_sonoff_0528
+                          name: Upgrade
             - type: 'custom:button-card'
               show_icon: false
               show_name: false
@@ -408,29 +409,9 @@
                     - entity: sensor.wemosd1_rssi
                       name: RSSI
                       icon: mdi:signal-variant
-                  style: |
-                    ha-card {
-                      background-color: var(--primary-background-color);
-                      border-radius: 15px;
-                      box-shadow:
-                        {% if is_state('sun.sun', 'above_horizon') %}
-                          -4px -4px 4px 0 rgba(255,255,255,.5),4px 4px 4px 0 rgba(0,0,0,.03);
-                        {% else %}
-                          -4px -4px 4px 0 rgba(50, 50, 50,.5),4px 4px 4px 0 rgba(0,0,0,.15);
-                        {% endif %}
-                    }
                 - type: entities
                   show_header_toggle: false
                   entities:
-                    - type: custom:fold-entity-row
-                      head:
-                        type: section
-                        label: Automatisierungen
-                      entities:
-                        - entity: automation.update_available_tasmota_wemosd1_1
-                          name: Updatebenachrichtigung
-                        - entity: automation.upgrade_tasmota_wemosd1_1
-                          name: Upgrade
                     - type: custom:fold-entity-row
                       head:
                         type: section
