--- a/config/integrations/homekit.yaml
+++ b/config/integrations/homekit.yaml
@@ -30,6 +30,9 @@ filter:
     - media_player.playstation_4
     - sensor.wemosd1_room_humidity
     - sensor.wemosd1_room_temperature
+  exclude_entities:
+    - cover.living_room_group
+    - cover.bed_room_group
 entity_config:
   input_boolean.loop_livingcolors_1:
     name: "Loop 1"
