--- a/config/integrations/plant.yaml
+++ b/config/integrations/plant.yaml
@@ -1,13 +1,13 @@
 ---
 # plants
 
-Yucca Elephantipes:
+Yucca aloifolia:
   sensors:
-    moisture: sensor.yuccaelephantipes_moisture
-    battery: sensor.yuccaelephantipes_battery
-    temperature: sensor.yuccaelephantipes_temperature
-    conductivity: sensor.yuccaelephantipes_conductivity
-    brightness: sensor.yuccaelephantipes_light
+    moisture: sensor.yuccaaloifolia_moisture
+    battery: sensor.yuccaaloifolia_battery
+    temperature: sensor.yuccaaloifolia_temperature
+    conductivity: sensor.yuccaaloifolia_conductivity
+    brightness: sensor.yuccaaloifolia_light
   min_moisture: 15
   max_moisture: 60
   min_battery: 20
