--- a/config/lovelace/views/03-blinds.yaml
+++ b/config/lovelace/views/03-blinds.yaml
@@ -73,13 +73,13 @@
                   style: |
                     ha-card {
                       box-shadow:
-                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.living_room_group', 'closed') %}
+                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.living_room_group', 'open') %}
                           inset -4px -4px 8px 0 rgba(255,255,255,.5), inset 4px 4px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.living_room_group', 'open') %}
+                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.living_room_group', 'closed') %}
                           -5px -5px 8px 0 rgba(255,255,255,.5),5px 5px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.living_room_group', 'closed') %}
-                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
                         {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.living_room_group', 'open') %}
+                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.living_room_group', 'closed') %}
                           -5px -5px 8px 0 rgba(50, 50, 50,.5),5px 5px 8px 0 rgba(0,0,0,.15);
                         {% endif %}
                     }
@@ -119,13 +119,13 @@
                   style: |
                     ha-card {
                       box-shadow:
-                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_1', 'closed') %}
+                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_1', 'open') %}
                           inset -4px -4px 8px 0 rgba(255,255,255,.5), inset 4px 4px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_1', 'open') %}
+                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_1', 'closed') %}
                           -5px -5px 8px 0 rgba(255,255,255,.5),5px 5px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_1', 'closed') %}
-                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
                         {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_1', 'open') %}
+                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_1', 'closed') %}
                           -5px -5px 8px 0 rgba(50, 50, 50,.5),5px 5px 8px 0 rgba(0,0,0,.15);
                         {% endif %}
                     }
@@ -169,13 +169,13 @@
                   style: |
                     ha-card {
                       box-shadow:
-                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_2', 'closed') %}
+                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_2', 'open') %}
                           inset -4px -4px 8px 0 rgba(255,255,255,.5), inset 4px 4px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_2', 'open') %}
+                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_2', 'closed') %}
                           -5px -5px 8px 0 rgba(255,255,255,.5),5px 5px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_2', 'closed') %}
-                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
                         {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_2', 'open') %}
+                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_2', 'closed') %}
                           -5px -5px 8px 0 rgba(50, 50, 50,.5),5px 5px 8px 0 rgba(0,0,0,.15);
                         {% endif %}
                     }
@@ -266,13 +266,13 @@
                   style: |
                     ha-card {
                       box-shadow:
-                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.bed_room_group', 'closed') %}
+                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.bed_room_group', 'open') %}
                           inset -4px -4px 8px 0 rgba(255,255,255,.5), inset 4px 4px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.bed_room_group', 'open') %}
+                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.bed_room_group', 'closed') %}
                           -5px -5px 8px 0 rgba(255,255,255,.5),5px 5px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.bed_room_group', 'closed') %}
-                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
                         {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.bed_room_group', 'open') %}
+                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.bed_room_group', 'closed') %}
                           -5px -5px 8px 0 rgba(50, 50, 50,.5),5px 5px 8px 0 rgba(0,0,0,.15);
                         {% endif %}
                     }
@@ -312,13 +312,13 @@
                   style: |
                     ha-card {
                       box-shadow:
-                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_3', 'closed') %}
+                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_3', 'open') %}
                           inset -4px -4px 8px 0 rgba(255,255,255,.5), inset 4px 4px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_3', 'open') %}
+                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_3', 'closed') %}
                           -5px -5px 8px 0 rgba(255,255,255,.5),5px 5px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_3', 'closed') %}
-                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
                         {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_3', 'open') %}
+                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_3', 'closed') %}
                           -5px -5px 8px 0 rgba(50, 50, 50,.5),5px 5px 8px 0 rgba(0,0,0,.15);
                         {% endif %}
                     }
@@ -362,13 +362,13 @@
                   style: |
                     ha-card {
                       box-shadow:
-                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_4', 'closed') %}
+                        {% if is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_4', 'open') %}
                           inset -4px -4px 8px 0 rgba(255,255,255,.5), inset 4px 4px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_4', 'open') %}
+                        {% elif is_state('sun.sun', 'above_horizon') and is_state('cover.fyrtur_4', 'closed') %}
                           -5px -5px 8px 0 rgba(255,255,255,.5),5px 5px 8px 0 rgba(0,0,0,.03);
-                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_4', 'closed') %}
-                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
                         {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_4', 'open') %}
+                          inset -4px -4px 10px 0 rgba(50, 50, 50,.5), inset 4px 4px 12px 0 rgba(0,0,0,.3);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('cover.fyrtur_4', 'closed') %}
                           -5px -5px 8px 0 rgba(50, 50, 50,.5),5px 5px 8px 0 rgba(0,0,0,.15);
                         {% endif %}
                     }
