update switch wishlist

--- a/config/integrations/nintendo_wishlist.yaml
+++ b/config/integrations/nintendo_wishlist.yaml
@@ -12,3 +12,6 @@ wishlist:
   - "Wargroove"
   - "The Touryst"
   - "Hollow Knight"
+  - "Dr. Kawashimas Gehirn-Jogging für Nintendo Switch"
+  - "The Legend of Zelda: Link's Awakening"
+  - "Animal Crossing: New Horizons"
