--- a/config/customization/customize/media_player.yaml
+++ b/config/customization/customize/media_player.yaml
@@ -1,6 +1,7 @@
 ---
 # media player customization
 
-media_player.braviatv_1:
+media_player.sony_bravia_tv:
   friendly_name: Sony Bravia TV
   icon: mdi:television
+  source_list: ["HDMI 1","HDMI 2","HDMI 3/ARC","HDMI 4","AV/Component","PlayStation 4","ORF eins HD","ORF 2 Wien HD","ATV HD","PULS 4 HD","Das Erste HD","ZDF HD","ORF III HD","ProSieben HD","RTL","SAT.1 HD","RTL II","kabel eins HD","VOX","ATV II HD","kabel eins Doku","arte HD","N24 doku","ntv","Comedy Central HD","PULS24 HD","ZDF neo HD","Phoenix HD","ZDF info HD","One HD","ARD alpha HD","ORF Sport+ HD","Sky Sport News HD","Sport 1 HD","Eurosport 1 HD","Sky 1 HD","Sky Sport Austria 1 HD","Sky Sport Austria 2 HD","Sky Sport Austria 3 HD","Sky Sport Austria 4 HD","Sky Sport HD 1","Sky Sport HD 2","Sky Sport HD 3","Sky Sport HD 4","YouTube","maxdome","Prime Video","Netflix","ORF TVthek","ZDFmediathek","VLC","Kodi"]
